# ssg

./: .gitignore  README.md  config.json  config.local.json  main.py  publishdates.json  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  ssg.py
src/config/: config.py
src/content/: article.py
src/dirtree/: directory_node.py  file_node.py
src/fileprocessor/: frame.py  html_file.py  markdown_file.py  markdown_file_processor.py  markdown_fle_processor.py
src/git/: git.py
src/rss/: rss_builder.py
src/runner/: runner.py
src/ssg/: command_line.py
src/ssg/config/: config.py
src/ssg/content/: article.py  frame.py  html_file.py  markdown_file.py
src/ssg/dirtree/: create_directory_tree.py  directory_node.py  file_node.py  node.py
src/ssg/engine/: cover_image.py  engine.py  meta.py
src/ssg/git/: git.py
src/ssg/rss/: rss_feed_generator.py
src/ssg/runner/: runner.py
src/ssg/template/: html_file.py  template.py  template_engine.py
ssg/: __init__.py  __main__.py  command_line.py  ssg.py
ssg/config/: config.py
ssg/fileprocessor/: file_processor.py  frame.py  html_file.py  markdown_file.py  markdown_fle_processor.py
ssg/runner/: __init__.py  ssg.py
tests/: conftest.py  main_test.py  ssg_test.py  test_create_directory_tree.py  test_engine.py  test_git.py  test_html_file.py  test_markdown_file.py  test_markdown_fle_processor.py  test_rss_feed_generator.py  test_runner.py
