[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ssg"
version = "0.11.0"
authors = [{name = "Ervin Szilagyi", email = "ervin_szilagyi@outlook.com"}]
description = "Static site generator"
keywords = ["static site generator"]
license = {text = "MIT"}
classifiers = [
    "License :: MIT License",
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://github.com/Ernyoke/ssg"}
requires-python = ">=3.12"
dependencies = [
    "lxml >= 6.0.1",
    "beautifulsoup4 >= 4.13.5",
    "Markdown >= 3.9",
    "python-slugify >= 8.0.4",
    "pygit2 >= 1.18.2",
    "pymdown-extensions >= 10.16.1"
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
ssg = "ssg.command_line:main"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"*" = ["README.md"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "unit: fast, isolated unit tests",
    "integration: slower tests that perform real file I/O",
]
