[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ssg"
version = "0.12.0"
authors = [{name = "Ervin Szilagyi", email = "ervin_szilagyi@outlook.com"}]
description = "Static site generator"
keywords = ["static site generator"]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://github.com/Ernyoke/ssg"}
requires-python = ">=3.13"
dependencies = [
    "lxml >= 6.1.0",
    "beautifulsoup4 >= 4.14.3",
    "Markdown >= 3.10.2",
    "python-slugify >= 8.0.4",
    "pygit2 >= 1.19.2",
    "pymdown-extensions >= 10.21.2",
    "feedgen>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
ssg = "ssg.command_line:main"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"*" = ["README.md"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "unit: fast, isolated unit tests",
    "integration: slower tests that perform real file I/O",
]
