[metadata]
name = ssg
version = 0.4.0
author = Ervin Szilagyi
author_email = Ervin Szilagyi
url = https://github.com/Ernyoke/ssg
description = Static site generator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = static site generator
license = MIT
classifiers =
    License :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.10
install_requires =
    beautifulsoup4 >= 4.11.2
    Markdown >= 3.3.4
    unicode_slugify >= 0.1.5

[options.entry_points]
console_scripts =
    ssg = ssg.command_line:main

[options.package_data]
* = README.md