[metadata]
name = ssg
version = 0.5.1
author = Ervin Szilagyi
author_email = ervin_szilagyi@outlook.com
url = https://github.com/Ernyoke/ssg
description = Static site generator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = static site generator
license = MIT
classifiers =
    License :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    = ssg
    = ssg/config
    = ssg/fileprocessor
zip_safe = False
include_package_data = True
python_requires = >=3.11
install_requires =
    beautifulsoup4 >= 4.11.3
    Markdown >= 3.4.4
    python-slugify >= 8.0.4

[options.entry_points]
console_scripts =
    ssg = ssg.command_line:main

[options.package_data]
* = README.md